# ByteTrack

./: .gitignore  CMakeLists.txt
example/: example.cpp
include/: BYTETracker.h  STrack.h  dataType.h  kalmanFilter.h  lapjv.h
src/: BYTETracker.cpp  STrack.cpp  kalmanFilter.cpp  utils.cpp
videos/: palace.json
